# flasheng-backend-server

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  main.py
app/models/: __init__.py  credit_plan.py  job.py  prompt.py  user.py
app/routers/: __init__.py  health.py  payment.py  resume.py  user.py
app/schemas/: __init__.py  job.py  payment.py  resume.py  user.py
app/seed/: credit_plans.py  system_prompts.py
app/services/: ai_agent.py  github.py  linkedin_parser.py  linkedin_scraper.py  payment.py  pdf_converter.py  resume_builder.py  storage.py
app/templates/: resume_template.html
